# try_ogl

./: .gitmodules  CMakeLists.txt  bld.sh
src/tutorial_1/: CMakeLists.txt  main.cpp
